# libsolmath

./: CMakeLists.txt  LICENSE  NOTICE  README.md  math.cpp  math.h  vectors.h
cmake/: license_template.txt  update_license.cmake
include/libsolmath/: math.h  vectors.h
include/libsolmath/tools/: average.h  exception.h  format.h  logger.h  random_element.h  sangle.h  sbuffer.h  slock.h  svector.h  threadpool.h  timer.h
src/: math.cpp
src/tools/: average.cpp  logger.cpp  sangle.cpp  svector.cpp  threadpool.cpp  timer.cpp
tools/: average.cpp  exception.h  logger.cpp  sangle.cpp  svector.cpp  svector.h  threadpool.cpp  timer.cpp
