file(GLOB_RECURSE sources "*.h" "*.cpp")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(solmath ${sources})
target_include_directories(solmath SYSTEM PRIVATE "../")
target_include_directories(solmath SYSTEM PRIVATE "../deps/magic_enum/include")
target_compile_definitions(solmath PUBLIC SOLMATH_PRECISION=float)
